added some styliusing scss file

--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,6 +1,7 @@
-<h1>Answers</h1>
+<h1>Coach Answer</h1>
 
-<p><%= @answer %></p>
-
+<span id = "coach-answer"><%= @answer %></span>
+<br>
+<br>
 <!--Add a link to /ask on the answer.html.erb view using the link_to Rails helper. -->
 <%= link_to "ask", ask_path  %>
