--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the questions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+$gray: #F4F4F4;
+
+body {
+  background: $gray; // Using this variable
+}
+
+h2 {
+  color: darkgrey;
+  font-weight: lighter;
+}
+
+#submit {
+  background-color: blue;
+  color:white;
+
+}
+
+#coach-answer{
+  background-color: yellow;
+
+}
